force-app/main/default/objects/Covamo_Admin_Setup__c/Covamo_Admin_Setup__c.object-meta.xml
<CustomObject>
    <label>Covamo Admin Setup</label>
    <nameField>
        <label>Covamo Admin Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covamo Admin Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>