force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit__c</fullName>
    <label>Base Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>