force-app/main/default/objects/Covamo_Admin_Setup__c/fields/BDF__c.field-meta.xml
<CustomField>
    <fullName>BDF__c</fullName>
    <label>BDF (&apos;000 USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>