force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Conversion_SI__c.field-meta.xml
<CustomField>
    <fullName>Conversion_SI__c</fullName>
    <label>Conversion SI (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>