force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Corporate_income_tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Corporate_income_tax_rate__c</fullName>
    <label>Corporate income tax rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>