force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Cost_Below_C5__c.field-meta.xml
<CustomField>
    <fullName>Cost_Below_C5__c</fullName>
    <label>Cost Below C5 (MYR/Litre)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>