force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Cost_Between_C3_C5__c.field-meta.xml
<CustomField>
    <fullName>Cost_Between_C3_C5__c</fullName>
    <label>Cost Between C3 C5 (MYR/Litre)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>