force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Covamo_FS_ReportId__c.field-meta.xml
<CustomField>
    <fullName>Covamo_FS_ReportId__c</fullName>
    <label>Covamo FS ReportId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>