force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Days_Per_year__c.field-meta.xml
<CustomField>
    <fullName>Days_Per_year__c</fullName>
    <label>Days Per year (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>