force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate (USD/LC)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>