force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Integrity_check__c.field-meta.xml
<CustomField>
    <fullName>Integrity_check__c</fullName>
    <label>Integrity check (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>