force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <label>Local Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>