force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Payables__c.field-meta.xml
<CustomField>
    <fullName>Payables__c</fullName>
    <label>Payables (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>