force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Receivables__c.field-meta.xml
<CustomField>
    <fullName>Receivables__c</fullName>
    <label>Receivables (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>