force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Temperature_Gain__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gain__c</fullName>
    <label>Temperature Gain (MYR/Litre)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>