force-app/main/default/objects/Covamo_Admin_Setup__c/fields/VAT_Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>VAT_Payment_Days__c</fullName>
    <label>VAT Payment Days (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>