force-app/main/default/objects/Covamo_Admin_Setup__c/fields/Weighted_Average_Cost_of_Capital__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Cost_of_Capital__c</fullName>
    <label>Weighted Average Cost of Capital (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>